--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Galvanize Personnel</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" rel="stylesheet" integrity="sha384-OiWEn8WwtH+084y4yW2YhhH6z/qTSecHZuk/eiWtnvLtU+Z8lpDsmhOKkex6YARr" crossorigin="anonymous">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="../assets/styles/main.css">
     </head>
     <body>
     <div class="container-fluid col-md-6">
@@ -26,8 +26,8 @@
         </select>
       </div>
       <div class="text-center"><img src="http://placehold.it/300x300"></div>
+        <p class="save-status"></p>
         <button type="button" name="button" class="btn btn-primary btn-lg btn-block">Save</button>
-      <div class="alert alert-dismissible alert-warning" id="alert"></div>
       </form>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
