--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Galvanize Personnel</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" rel="stylesheet" integrity="sha384-OiWEn8WwtH+084y4yW2YhhH6z/qTSecHZuk/eiWtnvLtU+Z8lpDsmhOKkex6YARr" crossorigin="anonymous">
-        <link rel="stylesheet" href="../assets/styles/main.css">
+        <link rel="stylesheet" href="./assets/styles/main.css">
     </head>
     <body>
     <div class="container-fluid col-md-6">
@@ -31,6 +31,6 @@
       </form>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-      <script type="text/javascript" src="../assets/scripts/app.js"></script>
+      <script type="text/javascript" src="./assets/scripts/app.js"></script>
     </body>
 </html>
